--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,13 +17,13 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Better Reads</title>
+    <title>Read Better</title>
   </head>
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Better Reads</a>
+          <a class="navbar-brand" href="/">Read Better</a>
         
         </div>
       </nav>
